[gd_scene load_steps=8 format=3 uid="uid://32d47my2jm0o"]

[ext_resource type="Script" path="res://Scripts/StatusBar.gd" id="1_jq2uh"]
[ext_resource type="StyleBox" uid="uid://dploqfehpap8o" path="res://Scenes/StyleBoxFlat/StatusBarGrey.tres" id="2_xrd3a"]
[ext_resource type="StyleBox" uid="uid://4nvf6ce53o61" path="res://Scenes/StyleBoxFlat/StatusBarRed.tres" id="3_amsbp"]
[ext_resource type="StyleBox" uid="uid://nl8slv4ocxs1" path="res://Scenes/StyleBoxFlat/StatusBarYellow.tres" id="4_gtbty"]
[ext_resource type="StyleBox" uid="uid://btf23yf4b5yir" path="res://Scenes/StyleBoxFlat/StatusBarBlue.tres" id="5_b0lid"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8neiy"]
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lt23r"]
bg_color = Color(0, 1, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="StatusBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 3.0
offset_right = -1147.0
offset_bottom = -645.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_jq2uh")

[node name="HealthProgressBar" type="ProgressBar" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 2.0
offset_right = 144.0
offset_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = ExtResource("2_xrd3a")
theme_override_styles/fill = ExtResource("3_amsbp")
show_percentage = false

[node name="APProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 147.0
offset_right = 144.0
offset_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = ExtResource("2_xrd3a")
theme_override_styles/fill = ExtResource("4_gtbty")
show_percentage = false

[node name="ManaProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = -10.0
offset_right = 79.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = ExtResource("2_xrd3a")
theme_override_styles/fill = ExtResource("5_b0lid")
show_percentage = false

[node name="QiProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = -10.0
offset_right = 144.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_8neiy")
theme_override_styles/fill = SubResource("StyleBoxFlat_lt23r")
show_percentage = false
